Confirm LangChain LLM works with env loading

--- a/notebooks/02_langchain_basics.ipynb
+++ b/notebooks/02_langchain_basics.ipynb
@@ -31,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OPENAI_API_KEY exists: False\n"
+      "OPENAI_API_KEY exists: True\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9ebb2793-50c7-4351-b4b5-ba17ae29a8af",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OPENAI_API_KEY exists: False\n"
+      "OPENAI_API_KEY exists: True\n"
      ]
     }
    ],
@@ -103,8 +103,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "831d1b2f-257f-493d-8b3f-02c84723837a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages/langchain_core/_api/deprecation.py:26: UserWarning: Core Pydantic V1 functionality isn't compatible with Python 3.14 or greater.\n",
+      "  from pydantic.v1.fields import FieldInfo as FieldInfoV1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='The capital of India is New Delhi.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 13, 'total_tokens': 21, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_e413f45763', 'id': 'chatcmpl-ColImTzCl3evwwwQcxi169Oe7tBF5', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None} id='lc_run--019b3a92-e114-7a71-8dae-af24e804fdad-0' usage_metadata={'input_tokens': 13, 'output_tokens': 8, 'total_tokens': 21, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(model='gpt-4o')\n",
+    "result = llm.invoke(\"what is the capital of India\")\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db56a0bd-d3e5-42e7-b72a-d866294bcef3",
    "metadata": {},
    "outputs": [],
    "source": []
