Add email reply prompt template example

--- a/notebooks/02_langchain_basics.ipynb
+++ b/notebooks/02_langchain_basics.ipynb
@@ -133,8 +133,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "82a1d8bb-7cec-4680-84a4-fcf70a28fadd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import PromptTemplate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "db56a0bd-d3e5-42e7-b72a-d866294bcef3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "email_prompt = PromptTemplate(\n",
+    "    input_variables=[\"sender\", \"subject\", \"body\"], \n",
+    "    template =\"\"\"\n",
+    "    You are an email assistant.\n",
+    "\n",
+    "Sender: {sender}\n",
+    "Subject: {subject}\n",
+    "\n",
+    "Email Body:\n",
+    "{body}\n",
+    "\n",
+    "Task:\n",
+    "Write a short professional reply.\n",
+    "\"\"\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "43d9f32e-5e80-48dc-a872-665f868b1e57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    You are an email assistant.\n",
+      "\n",
+      "Sender: HR Team\n",
+      "Subject: Interview Schedule\n",
+      "\n",
+      "Email Body:\n",
+      "We would like to schedule the interview next week. Please confirm availability.\n",
+      "\n",
+      "Task:\n",
+      "Write a short professional reply.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "formatted_prompt = email_prompt.format(\n",
+    "    sender = \"HR Team\",\n",
+    "    subject = \"Interview Schedule\",\n",
+    "    body = \"We would like to schedule the interview next week. Please confirm availability.\"\n",
+    ")\n",
+    "print(formatted_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b128f062-126f-4dcb-bda8-381610fd73c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject: Re: Interview Schedule\n",
+      "\n",
+      "Dear HR Team,\n",
+      "\n",
+      "Thank you for considering me for this opportunity. I am available for an interview next week and would appreciate any further details you can provide about the specific date and time. \n",
+      "\n",
+      "Looking forward to your reply.\n",
+      "\n",
+      "Best regards,\n",
+      "\n",
+      "[Your Name]\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = llm.invoke(formatted_prompt)\n",
+    "print(response.content)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7604024-73bd-4d72-ac78-2f7b2b631601",
    "metadata": {},
    "outputs": [],
    "source": []
