Fix notebook imports to use src package

--- a/notebooks/02_langchain_basics.ipynb
+++ b/notebooks/02_langchain_basics.ipynb
@@ -230,8 +230,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "id": "e726feb7-a740-403f-aa39-4883fde448b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"../src\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "b7604024-73bd-4d72-ac78-2f7b2b631601",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject: Re: Interview Schedule\n",
+      "\n",
+      "Dear HR Team,\n",
+      "\n",
+      "Thank you for considering me for the interview. I am available next week and would be happy to accommodate any time slots you propose. Please let me know the details at your earliest convenience.\n",
+      "\n",
+      "Looking forward to it.\n",
+      "\n",
+      "Best regards,\n",
+      "\n",
+      "[Your Name]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from email_agent.prompts import EMAIL_REPLY_PROMPT\n",
+    "from email_agent.llm import get_llm\n",
+    "\n",
+    "llm = get_llm()\n",
+    "formatted_prompt = EMAIL_REPLY_PROMPT.format(\n",
+    "    sender = \"HR Team\",\n",
+    "    subject=\"Interview Schedule\",\n",
+    "    body=\"We would like to schedule your interview next week. Please confirm availability.\"\n",
+    ")\n",
+    "response = llm.invoke(formatted_prompt)\n",
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef01e1c9-023e-4838-979f-14e769327480",
    "metadata": {},
    "outputs": [],
    "source": []
