--- a/notebooks/02_langchain_basics.ipynb
+++ b/notebooks/02_langchain_basics.ipynb
@@ -119,7 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='The capital of India is New Delhi.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 13, 'total_tokens': 21, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_e413f45763', 'id': 'chatcmpl-ColImTzCl3evwwwQcxi169Oe7tBF5', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None} id='lc_run--019b3a92-e114-7a71-8dae-af24e804fdad-0' usage_metadata={'input_tokens': 13, 'output_tokens': 8, 'total_tokens': 21, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
+      "content='The capital of India is New Delhi.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 13, 'total_tokens': 21, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_e413f45763', 'id': 'chatcmpl-CoqjpPvUv0UhNdagiGkcRTY7IecNK', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None} id='lc_run--019b3bd1-be78-7661-8cff-4cdb82e5b7ec-0' usage_metadata={'input_tokens': 13, 'output_tokens': 8, 'total_tokens': 21, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
      ]
     }
    ],
@@ -213,9 +213,9 @@
       "\n",
       "Dear HR Team,\n",
       "\n",
-      "Thank you for considering me for this opportunity. I am available for an interview next week and would appreciate any further details you can provide about the specific date and time. \n",
+      "Thank you for considering me for the interview opportunity. I am available next week and can accommodate the schedule that best suits your team. Please let me know the date and time, and I will ensure to be prepared.\n",
       "\n",
-      "Looking forward to your reply.\n",
+      "Looking forward to your confirmation.\n",
       "\n",
       "Best regards,\n",
       "\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "e726feb7-a740-403f-aa39-4883fde448b6",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "b7604024-73bd-4d72-ac78-2f7b2b631601",
    "metadata": {},
    "outputs": [
@@ -253,9 +253,9 @@
       "\n",
       "Dear HR Team,\n",
       "\n",
-      "Thank you for considering me for the interview. I am available next week and would be happy to accommodate any time slots you propose. Please let me know the details at your earliest convenience.\n",
+      "Thank you for considering my application. I am available for an interview next week and would appreciate any specific dates and times you have in mind. Please let me know what works best for you.\n",
       "\n",
-      "Looking forward to it.\n",
+      "Looking forward to your reply.\n",
       "\n",
       "Best regards,\n",
       "\n",
@@ -279,8 +279,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ef01e1c9-023e-4838-979f-14e769327480",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "request\n"
+     ]
+    }
+   ],
+   "source": [
+    "from email_agent.prompts import EMAIL_CLASSIFICATION_PROMPT\n",
+    "classification_prompt = EMAIL_CLASSIFICATION_PROMPT.format(\n",
+    "    subject = \"Interview Schedule\",\n",
+    "    body = \"We would like to schedule your interview next week. Please confirm availability.\"\n",
+    ")\n",
+    "classification = llm.invoke(classification_prompt)\n",
+    "print(classification.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "be6ed517-4eca-4d7b-a0d7-a2ba3774b14f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Category: request\n",
+      "Action: reply\n"
+     ]
+    }
+   ],
+   "source": [
+    "from email_agent.router import route_email\n",
+    "category = classification.content.strip().lower()\n",
+    "action = route_email(category)\n",
+    "\n",
+    "print(\"Category:\", category)\n",
+    "print(\"Action:\", action)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "055ddae1-1a27-4f98-8c78-26825b8a4059",
    "metadata": {},
    "outputs": [],
    "source": []
