--- a/notebooks/02_langchain_basics.ipynb
+++ b/notebooks/02_langchain_basics.ipynb
@@ -119,7 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='The capital of India is New Delhi.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 13, 'total_tokens': 21, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_e413f45763', 'id': 'chatcmpl-CoqjpPvUv0UhNdagiGkcRTY7IecNK', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None} id='lc_run--019b3bd1-be78-7661-8cff-4cdb82e5b7ec-0' usage_metadata={'input_tokens': 13, 'output_tokens': 8, 'total_tokens': 21, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
+      "content='The capital of India is New Delhi.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 13, 'total_tokens': 21, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_e413f45763', 'id': 'chatcmpl-CosbmQxOgCnbbVUvMTCAf7ubmeOqL', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None} id='lc_run--019b3c3f-7359-7ac0-a770-9b72ee5e2be0-0' usage_metadata={'input_tokens': 13, 'output_tokens': 8, 'total_tokens': 21, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
      ]
     }
    ],
@@ -213,9 +213,9 @@
       "\n",
       "Dear HR Team,\n",
       "\n",
-      "Thank you for considering me for the interview opportunity. I am available next week and can accommodate the schedule that best suits your team. Please let me know the date and time, and I will ensure to be prepared.\n",
+      "Thank you for considering me for the interview. I am available next week and can accommodate the schedule as needed. Please let me know the specific date and time that work best for you.\n",
       "\n",
-      "Looking forward to your confirmation.\n",
+      "Looking forward to the interview.\n",
       "\n",
       "Best regards,\n",
       "\n",
@@ -253,9 +253,9 @@
       "\n",
       "Dear HR Team,\n",
       "\n",
-      "Thank you for considering my application. I am available for an interview next week and would appreciate any specific dates and times you have in mind. Please let me know what works best for you.\n",
+      "Thank you for the opportunity. I am available for an interview next week and would appreciate any details regarding the date and time. \n",
       "\n",
-      "Looking forward to your reply.\n",
+      "I look forward to our conversation.\n",
       "\n",
       "Best regards,\n",
       "\n",
@@ -327,8 +327,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "edea221f-ee14-45b3-953b-093e1f0bc3f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "def route_email(category: str) -> str:\n",
+      "    \"\"\"\n",
+      "    Decide what action to take based on email category.\n",
+      "    \"\"\"\n",
+      "    category = category.strip().lower()\n",
+      "\n",
+      "    if category == \"request\":\n",
+      "        return \"reply\"\n",
+      "    elif category == \"urgent\":\n",
+      "        return \"escalate\"\n",
+      "    elif category == \"information\":\n",
+      "        return \"acknowledge\"\n",
+      "    elif category == \"spam\":\n",
+      "        return \"ignore\"\n",
+      "    else:\n",
+      "        return \"unknown\"\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import inspect \n",
+    "from email_agent.router import route_email\n",
+    "print(inspect.getsource(route_email))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3224e37e-c3b1-4843-ac33-2160cb55723f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: langgraph in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (1.0.4)\n",
+      "Requirement already satisfied: langchain-core>=0.1 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langgraph) (1.2.4)\n",
+      "Requirement already satisfied: langgraph-checkpoint<4.0.0,>=2.1.0 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langgraph) (3.0.1)\n",
+      "Requirement already satisfied: langgraph-prebuilt<1.1.0,>=1.0.2 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langgraph) (1.0.5)\n",
+      "Requirement already satisfied: langgraph-sdk<0.3.0,>=0.2.2 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langgraph) (0.2.12)\n",
+      "Requirement already satisfied: pydantic>=2.7.4 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langgraph) (2.12.5)\n",
+      "Requirement already satisfied: xxhash>=3.5.0 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langgraph) (3.6.0)\n",
+      "Requirement already satisfied: ormsgpack>=1.12.0 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langgraph-checkpoint<4.0.0,>=2.1.0->langgraph) (1.12.0)\n",
+      "Requirement already satisfied: httpx>=0.25.2 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langgraph-sdk<0.3.0,>=0.2.2->langgraph) (0.28.1)\n",
+      "Requirement already satisfied: orjson>=3.10.1 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langgraph-sdk<0.3.0,>=0.2.2->langgraph) (3.11.4)\n",
+      "Requirement already satisfied: anyio in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from httpx>=0.25.2->langgraph-sdk<0.3.0,>=0.2.2->langgraph) (4.12.0)\n",
+      "Requirement already satisfied: certifi in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from httpx>=0.25.2->langgraph-sdk<0.3.0,>=0.2.2->langgraph) (2025.11.12)\n",
+      "Requirement already satisfied: httpcore==1.* in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from httpx>=0.25.2->langgraph-sdk<0.3.0,>=0.2.2->langgraph) (1.0.9)\n",
+      "Requirement already satisfied: idna in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from httpx>=0.25.2->langgraph-sdk<0.3.0,>=0.2.2->langgraph) (3.11)\n",
+      "Requirement already satisfied: h11>=0.16 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from httpcore==1.*->httpx>=0.25.2->langgraph-sdk<0.3.0,>=0.2.2->langgraph) (0.16.0)\n",
+      "Requirement already satisfied: jsonpatch<2.0.0,>=1.33.0 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langchain-core>=0.1->langgraph) (1.33)\n",
+      "Requirement already satisfied: langsmith<1.0.0,>=0.3.45 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langchain-core>=0.1->langgraph) (0.4.55)\n",
+      "Requirement already satisfied: packaging<26.0.0,>=23.2.0 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langchain-core>=0.1->langgraph) (24.2)\n",
+      "Requirement already satisfied: pyyaml<7.0.0,>=5.3.0 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langchain-core>=0.1->langgraph) (6.0.3)\n",
+      "Requirement already satisfied: tenacity!=8.4.0,<10.0.0,>=8.1.0 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langchain-core>=0.1->langgraph) (9.1.2)\n",
+      "Requirement already satisfied: typing-extensions<5.0.0,>=4.7.0 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langchain-core>=0.1->langgraph) (4.15.0)\n",
+      "Requirement already satisfied: uuid-utils<1.0,>=0.12.0 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langchain-core>=0.1->langgraph) (0.12.0)\n",
+      "Requirement already satisfied: jsonpointer>=1.9 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from jsonpatch<2.0.0,>=1.33.0->langchain-core>=0.1->langgraph) (3.0.0)\n",
+      "Requirement already satisfied: requests-toolbelt>=1.0.0 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langsmith<1.0.0,>=0.3.45->langchain-core>=0.1->langgraph) (1.0.0)\n",
+      "Requirement already satisfied: requests>=2.0.0 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langsmith<1.0.0,>=0.3.45->langchain-core>=0.1->langgraph) (2.32.5)\n",
+      "Requirement already satisfied: zstandard>=0.23.0 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from langsmith<1.0.0,>=0.3.45->langchain-core>=0.1->langgraph) (0.25.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from pydantic>=2.7.4->langgraph) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.41.5 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from pydantic>=2.7.4->langgraph) (2.41.5)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.2 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from pydantic>=2.7.4->langgraph) (0.4.2)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from requests>=2.0.0->langsmith<1.0.0,>=0.3.45->langchain-core>=0.1->langgraph) (3.4.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages (from requests>=2.0.0->langsmith<1.0.0,>=0.3.45->langchain-core>=0.1->langgraph) (2.5.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install langgraph\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d448bd47-789e-45c4-92a2-c2beb1607edf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'langgraph' has no attribute '__version__'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlanggraph\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mlanggraph\u001b[49m\u001b[43m.\u001b[49m\u001b[43m__version__\u001b[49m)\n",
+      "\u001b[31mAttributeError\u001b[39m: module 'langgraph' has no attribute '__version__'"
+     ]
+    }
+   ],
+   "source": [
+    "import langgraph\n",
+    "print(langgraph.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "79d4a222-e8e0-4839-b277-b194215cc878",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.0.4'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import importlib.metadata\n",
+    "\n",
+    "importlib.metadata.version(\"langgraph\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "055ddae1-1a27-4f98-8c78-26825b8a4059",
+   "id": "71c79765-4084-4af9-a2d0-db8df68c58f9",
    "metadata": {},
    "outputs": [],
    "source": []
