Complete Project 0: runnable email agent with logging and execution

--- a/notebooks/02_langchain_basics.ipynb
+++ b/notebooks/02_langchain_basics.ipynb
@@ -119,7 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='The capital of India is New Delhi.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 13, 'total_tokens': 21, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_e413f45763', 'id': 'chatcmpl-CosbmQxOgCnbbVUvMTCAf7ubmeOqL', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None} id='lc_run--019b3c3f-7359-7ac0-a770-9b72ee5e2be0-0' usage_metadata={'input_tokens': 13, 'output_tokens': 8, 'total_tokens': 21, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
+      "content='The capital of India is New Delhi.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 13, 'total_tokens': 21, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_e413f45763', 'id': 'chatcmpl-CpBrSYso4Tukxz3SU8DCdB35OAdSK', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None} id='lc_run--019b40a8-b6f8-7e81-9ee7-633555756809-0' usage_metadata={'input_tokens': 13, 'output_tokens': 8, 'total_tokens': 21, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
      ]
     }
    ],
@@ -213,9 +213,9 @@
       "\n",
       "Dear HR Team,\n",
       "\n",
-      "Thank you for considering me for the interview. I am available next week and can accommodate the schedule as needed. Please let me know the specific date and time that work best for you.\n",
+      "Thank you for considering me for the interview. I am available next week and can adjust my schedule to meet at your convenience. Please let me know the date and time that works best for you.\n",
       "\n",
-      "Looking forward to the interview.\n",
+      "Looking forward to our meeting.\n",
       "\n",
       "Best regards,\n",
       "\n",
@@ -253,12 +253,11 @@
       "\n",
       "Dear HR Team,\n",
       "\n",
-      "Thank you for the opportunity. I am available for an interview next week and would appreciate any details regarding the date and time. \n",
+      "Thank you for considering me for the interview. I am available next week and would be happy to accommodate any date and time you suggest. Please let me know your preferred schedule.\n",
       "\n",
-      "I look forward to our conversation.\n",
+      "Looking forward to our conversation.\n",
       "\n",
-      "Best regards,\n",
-      "\n",
+      "Best regards,  \n",
       "[Your Name]\n"
      ]
     }
@@ -412,44 +411,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "d448bd47-789e-45c4-92a2-c2beb1607edf",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'langgraph' has no attribute '__version__'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlanggraph\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mlanggraph\u001b[49m\u001b[43m.\u001b[49m\u001b[43m__version__\u001b[49m)\n",
-      "\u001b[31mAttributeError\u001b[39m: module 'langgraph' has no attribute '__version__'"
-     ]
-    }
-   ],
-   "source": [
-    "import langgraph\n",
-    "print(langgraph.__version__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "79d4a222-e8e0-4839-b277-b194215cc878",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.0.4'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import importlib.metadata\n",
     "\n",
@@ -458,8 +423,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "71c79765-4084-4af9-a2d0-db8df68c58f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sender': 'HR Team',\n",
+       " 'subject': 'Interview Schedule',\n",
+       " 'body': 'We would like to schedule your interview next week. Please confirm availability.',\n",
+       " 'category': 'request',\n",
+       " 'action': 'reply',\n",
+       " 'response': 'Subject: Re: Interview Schedule\\n\\nDear HR Team,\\n\\nThank you for considering my application. I am available for an interview next week and am eager to discuss this opportunity further. Please let me know the specific date and time that works best.\\n\\nLooking forward to your response.\\n\\nBest regards,\\n\\n[Your Name]'}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from email_agent.graph import build_email_agent\n",
+    "\n",
+    "agent = build_email_agent()\n",
+    "initial_state = {\n",
+    "    \"sender\": \"HR Team\",\n",
+    "    \"subject\": \"Interview Schedule\",\n",
+    "    \"body\": \"We would like to schedule your interview next week. Please confirm availability.\",\n",
+    "    \"category\": None,\n",
+    "    \"action\": None,\n",
+    "    \"response\": None,\n",
+    "}\n",
+    "final_state = agent.invoke(initial_state)\n",
+    "\n",
+    "final_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5391f66c-8bad-481a-9fe6-3578e6023329",
    "metadata": {},
    "outputs": [],
    "source": []
